--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,7 +1,14 @@
 <%- include("partials/header"); -%>
   <h1>Compose</h1>
   <form class="" action="/compose" method="post">
-    <input type="text" name="newPost">
-    <button type="submit" name="button">Publish</button>
+    <div class="form-group">
+      <label for="title">Title</label>
+      <input type="text" class="form-control" id="title" name="postTitle">
+    </div>
+    <div class="form-group">
+      <label for="textareaPost">Post</label>
+      <textarea class="form-control" id="textareaPost" name="postBody" rows="5"></textarea>
+    </div>
+    <button class="btn btn-primary" type="submit" name="button">Publish</button>
   </form>
 <%- include("partials/footer"); -%>
