styles.css: Add class 'truncated'; home.ejs: Add attribute 'class=truncated' to <p>

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,9 @@
+.truncated {
+  max-width: 79ch;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
 .container-fluid {
     padding-top: 70px;
     padding-bottom: 70px;
