--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,6 +4,6 @@
     <p><%= startingContent %></p>
     <% posts.forEach(function(post) { %>
       <h1><%= post.title %></h1>
-      <p class="truncated"><%= post.content %></p>
+      <p><%= post.content %></p>
     <% }); %>
   <%- include("partials/footer"); -%>
